--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,19 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-itertools = "0.10.0"
 rand = "0.8.0"
+
+[dev-dependencies]
+itertools = "0.10.0"
+criterion = "0.3.0"
+rand_chacha = "0.3.0"
 
 [profile.release]
 opt-level = 3
+
+[profile.bench]
+opt-level = 3
+
+[[bench]]
+name = "tsp"
+harness = false
